# examgen

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  abstract.tex  acknowledgements.tex  dasak-150604.tex  exam.mk.nw  examgen.bib  examgen.nw  examgen.py.nw  example.mk.nw  pyproject.toml  setup.py
doc/: .gitignore  Makefile  dasak-150604.tex  preamble.tex
examgen/: Makefile
examples/: .gitignore  Makefile  example.mk.nw  infosakb-150601.tex
examtools/: Makefile  __init__.py  examgen.py.nw  preamble.tex
pyexam/: Makefile  preamble.tex  pyexam.bib
src/: .gitignore  Makefile
src/examgen/: .gitignore  Makefile  init.nw
